--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "tsc": "tsc",
     "start": "ts-node-dev --respawn --transpileOnly ./src/index.ts",
-    "deploy": "tsc && node ./build/index.js"
+    "buildClient": "cd client && rm -rf dist && npm run build && cd ..",
+    "deploy": "npm run buildClient && tsc && node ./build/index.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
-    "@types/node": "^12.0.8"
+    "@types/node": "^12.0.8",
+    "@types/uuid": "^3.4.4"
   }
 }
