--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open --mode development --hot",
-    "build": "webpack --mode production",
+    "build": "rm -rf dist && webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,15 +14,28 @@
   "devDependencies": {
     "@types/react": "^16.8.20",
     "@types/react-dom": "^16.8.4",
+    "@types/react-modal": "^3.8.2",
+    "@types/validator": "^10.11.1",
+    "@types/yup": "^0.26.16",
     "awesome-typescript-loader": "^5.2.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "tslint": "^5.17.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.5.2",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.1"
   },
   "dependencies": {
+    "@types/styled-components": "4.1.8",
+    "formik": "^1.5.7",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-modal": "^3.8.1",
+    "styled-components": "^4.3.1",
+    "validator": "^11.0.0",
+    "yup": "^0.27.0"
   }
 }
