--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development --hot",
-    "build": "rm -rf dist && webpack --mode production",
+    "start": "NODE_ENV=dev webpack-dev-server --open --mode development --hot ",
+    "build": "NODE_ENV=prod rm -rf dist && webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,11 +15,15 @@
     "@types/react": "^16.8.20",
     "@types/react-dom": "^16.8.4",
     "@types/react-modal": "^3.8.2",
+    "@types/react-redux": "^7.1.0",
+    "@types/redux-logger": "^3.0.7",
+    "@types/redux-saga": "^0.10.5",
     "@types/validator": "^10.11.1",
     "@types/yup": "^0.26.16",
     "awesome-typescript-loader": "^5.2.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "redux-logger": "^3.0.6",
     "tslint": "^5.17.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
@@ -34,6 +38,11 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-modal": "^3.8.1",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
+    "redux-saga": "^1.0.3",
+    "reselect": "^4.0.0",
     "styled-components": "^4.3.1",
     "validator": "^11.0.0",
     "yup": "^0.27.0"
